add documentation for auth controller
